--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "Employee Tracker Using MySQL, Inquirer, Console.Table and Node.js",
   "main": "server.js",
+  "type": "module",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "mysql db/employees.db < db/schema.sql",
@@ -12,7 +14,6 @@
     "start": "node server.js"
   },
   "repository": {
-    "type": "git",
     "url": "git+https://github.com/Beenarob/EmployeeTracker.git"
   },
   "author": "Beena Robert",
@@ -24,11 +25,12 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "console.table": "^0.10.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "figlet": "^1.4.0",
     "inquirer": "^7.1.0",
-    "mysql2": "^2.1.0",
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.6.5",
     "nodemon": "^2.0.4",
     "validator": "^13.0.0"
   },
